--- a/5.md
+++ b/5.md
@@ -232,15 +232,15 @@ Hansberry’s cosmopolitanism prevented her embracing separatism. The Nation of 
 
 [^54]:	E. U. Essien-Udom, _Black Nationalism: A Search for an Identity in America_ (Chicago: University of Chicago Press, 1962); Theodore Draper, _The Rediscovery of Black Nationalism_(New York: Viking Press, 1970).
 
-Just as people of color rejected long-standing beliefs about their supposed lesser intellectual capacity and distorted values and inclinations, so too did women pushing for inclusion discard prevailing notions of their more passive, emotional and selfless nature. Those beliefs had justified their relegation to nurturing and support roles. It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how the conception of women as nurturers obscured women’s universal humanity and prevented their full participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. That position ended when she was let go after she became pregnant with her second child. She then turned to freelancing for women’s magazines and it was while surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957 that she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
+Just as people of color rejected long-standing beliefs about their supposed lesser intellectual capacity and distorted values and inclinations, so too did women pushing for inclusion discard prevailing notions of their more passive, emotional and selfless nature. Those beliefs had justified their relegation to nurturing and support roles. It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how such misconceptions had taken on an allure that ultimately diminished the full range of women's capabilities and limited their participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. Let go after she became pregnant with her second child, she turned to freelancing for women’s magazines. While surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957, she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
 
 [^55]:	Judith Hennessee, _Betty Friedan: Her Life_ (New York: Random House, 1999) and Daniel Horowitz, _Betty Friedan and the Making of the Feminine Mystique: The American Left, the Cold War, and Modern Feminism_ (Amherst: University of Massachusetts Press, 1998).
 
-Friedan found that, despite marriage and motherhood, college-educated women were haunted by a feeling of purposeless and emptiness. This omnipresent sense of incompleteness derived from what Friedan termed the “feminine mystique.” The mystique was a near universal belief that located the very core of womanhood in creation and nurture of life, investing biological functions with a spiritual and transcendent quality. With motherhood the ultimate measure of female identity, women need only accept their nature to fulfill their destiny. The intense promulgation of the ideology, Friedan insisted, convinced women to leave their World War II-era jobs for family homes. As the dissatisfaction of her classmates indicated, however, homemaking neither brought personal tranquility nor aided the social good. By exaggerating the power of anatomy, Friedan asserted, the mystique denied woman their full status as human. The failure of domestic life to deliver the expected rewards prompted women to seek relief from the nameless frustration in self-destructive behavior. Perhaps most devastating was, Friedan claimed, was “mounting sex hunger” in hopes that constant erotic thought and behavior would convey a feeling of vitality. This stunted existence, Friedan concluded, followed from Americans’ refusal to recognize that like men, women faced tasks of self enhancement and growth. It was her hope that the dissatisfaction would be “a turning point from an immaturity that has been called femininity to full human identity.”[^56]
+Friedan found that marriage and motherhood did not relieve college-educated women of feelings of purposeless and emptiness. This omnipresent sense of incompleteness derived from what Friedan termed the “feminine mystique.” The mystique was a near universal belief that located the very core of womanhood in creation and nurture of life, investing biological functions with a spiritual and transcendent quality. The spell of the mystique was such that women needed only accept their nature to fulfill their destiny. The intense promulgation of the ideology, Friedan insisted, convinced women to leave their World War II-era jobs for family homes. As the dissatisfaction of her classmates indicated, however, homemaking neither brought personal tranquility nor aided the social good. By exaggerating the power of anatomy, Friedan asserted, the mystique denied woman their full status as human. The failure of domestic life to deliver the expected rewards prompted women to seek relief from the nameless frustration in self-destructive behavior. Perhaps most devastating was “mounting sex hunger,” indulged in hopes that constant erotic thought and behavior would convey a feeling of vitality. Women lived a stunted existence, Friedan charged, because Americans refused to recognize that like men, women faced tasks of self enhancement and growth. It was her hope that the dissatisfaction would be “a turning point from an immaturity that has been called femininity to full human identity.”[^56]
 
 [^56]:	Betty Friedan, _The Feminine Mystique_ (New York: Laurel, 1983), 79.
 
-_Mystique_ was filled with stories of intelligent women under the spell of the mystique who cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that operated on the premise that women’s identity was rooted in their biology and that their nature was emotional and passive. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put at the center of female psychology penis envy, the desire for the male organ and the power it embodied and posited that women could compensate for their incomplete nature by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
+_Mystique_ was filled with stories of intelligent women who bowed to social expectations and cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that operated on the premise that women’s identity was rooted in their biology and that their nature was emotional and passive. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put at the center of female psychology penis envy, the desire for the male organ and the power it embodied and posited that women could compensate for their incomplete nature by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
 
 Friedan’s argument for common humanity was rooted in the alternative psychology of Erikson and humanistic psychologist Abraham Maslow. Maslow posited a pyramid of needs ranging from the physiological at the bottom to the self-actualization at the apex. Self-actualization needs, which included morality, creativity, and spontaneity, came into play when individuals engaged in a quest to achieve their full potential. Neither Erikson nor Maslow applied their theories to women or were conceived that the development that they described pertained to them (310-11). By limiting women to the lower levels of Maslow’s hierarchy, Friedan maintained, society suffered. “If women’s needs for identity, for self-esteem, for achievement, and finally for expression of her unique human individuality are not recognized by herself or others in our culture, she is forced to seek identity and self-esteem in the only channels open to her: the pursuit of sexual fulfillment, motherhood, and the possession of material things” (315-6). Friedan therefore urged women to reject deadening housework (342), reduce their investment in marriage (344), and train themselves for meaningful work. “Who knows,” Friedan asked at the conclusion of her book, “of the possibilities of love when men and women share not only children, home, and garden, not only the fulfillment of their biological roles, but also the responsibilities and passions of the work that creates the human future and the full human knowledge of who they are?” (378).
 
