--- a/5.md
+++ b/5.md
@@ -240,7 +240,7 @@ Friedan found that marriage and motherhood did not relieve college-educated wome
 
 [^56]:	Betty Friedan, _The Feminine Mystique_ (New York: Laurel, 1983), 79.
 
-_Mystique_ was filled with stories of intelligent women who bowed to social expectations and cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that operated on the premise that women’s identity was rooted in their biology and that their nature was emotional and passive. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put at the center of female psychology penis envy, the desire for the male organ and the power it embodied and posited that women could compensate for their incomplete nature by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
+_Mystique_ was filled with stories of intelligent women who bowed to social expectations and cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that accepted and promulgated the premise that women's identity was defined by their biology. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put at the center of female psychology penis envy, the desire for the male organ and the power it embodied and posited that women could compensate for their incomplete nature by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
 
 Friedan’s argument for common humanity was rooted in the alternative psychology of Erikson and humanistic psychologist Abraham Maslow. Maslow posited a pyramid of needs ranging from the physiological at the bottom to the self-actualization at the apex. Self-actualization needs, which included morality, creativity, and spontaneity, came into play when individuals engaged in a quest to achieve their full potential. Neither Erikson nor Maslow applied their theories to women or were conceived that the development that they described pertained to them (310-11). By limiting women to the lower levels of Maslow’s hierarchy, Friedan maintained, society suffered. “If women’s needs for identity, for self-esteem, for achievement, and finally for expression of her unique human individuality are not recognized by herself or others in our culture, she is forced to seek identity and self-esteem in the only channels open to her: the pursuit of sexual fulfillment, motherhood, and the possession of material things” (315-6). Friedan therefore urged women to reject deadening housework (342), reduce their investment in marriage (344), and train themselves for meaningful work. “Who knows,” Friedan asked at the conclusion of her book, “of the possibilities of love when men and women share not only children, home, and garden, not only the fulfillment of their biological roles, but also the responsibilities and passions of the work that creates the human future and the full human knowledge of who they are?” (378).
 
