Laptop 14 May 2019 evening

--- a/5.md
+++ b/5.md
@@ -230,7 +230,7 @@ White audiences might well have found the play inspiring and even reassuring, bu
 
 Hansberry’s cosmopolitanism prevented her embracing separatism. The Nation of Islam (NOI), on the other, emerged as the premier separatist organization of the era. Founded in 1930 in Chicago, the Nation boldly advanced an origin story of black chronological primacy upset by white devils later created to suppress black achievement and freedom through lies, eugenic elimination, and outright seizure of power. The Nation preached black pride, discipline, and achievement as crucial to the establishment and maintenance of orderly communities. The Nigerian scholar E. O. Essien-Udom, who did fieldwork with the Nation, concluded that the sense of purpose NOI conveyed rather than its version of Islam accounted for its growing appeal. Essien-Udom further noted that NOI were unique among black nationalists in that it made little reference to a past culture or a common American or African history. Rather it pledged a complete reconstruction. NOI naming practices (Malcolm X being the most well-known) in which American blacks dropped names of former masters as symbolic of their old, slave past were indicative of that goal. NOI separatism was also apparent as well in the relative silence of its midcentury leader, the Honorable Elijah Muhammad, about African independence movements or the burgeoning civil rights movement in the United States. The Nation held the civil rights movement in disdain, condemning its integrationist goals as assimilationists and too dependent on a non-existent good will of white devils. Talk of love and co-existence, its members said, would never build a meaningful racial identity. Business success, the elimination of neighborhood crime, and the use of the Temple as a community center prompted growth in membership. By 1959, NOI boasted some fifty temples and enrolled followers, depending on the source, as high as 200,000. Made famous by the CBS show, “The Hate that Hate Produced,” the Nation excited white fears of violent confrontation, although NOI members never carried weapons. Although NOI rhetoric emphasized white devils, it intended not to suppress whites but to establish a homeland where blacks could determine their own destiny.[^54]
 
-[^54]:	E. U. Essien-Udom, _Black Nationalism: A Search for an Identity in America_ (Chicago: University of Chicago Press, 1962); Theodore Draper, _The Rediscovery of Black Nationalism_(New York: Viking Press, 1970).
+[^54]:	E. U. Essien-Udom, _Black Nationalism: A Search for an Identity in America_ (Chicago: University of Chicago Press, 1962).
 
 Just as people of color rejected long-standing beliefs about their supposed lesser intellectual capacity and distorted values and inclinations, so too did women pushing for inclusion discard prevailing notions of their more passive, emotional and selfless nature. Those beliefs had justified their relegation to nurturing and support roles. It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how such misconceptions had taken on an allure that ultimately diminished the full range of women's capabilities and limited their participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. Let go after she became pregnant with her second child, she turned to freelancing for women’s magazines. While surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957, she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
 
@@ -254,7 +254,7 @@ Others have pointed out that Friedan’s portrait of the intellectual climate wa
 
 [^58]:	Susan Hartmann, “Women’s Employment and the Domestic Ideal in the Early Cold War Years,” in Joanne Meyerowitz, _Not June Cleaver: Women and Gender in Postwar America, 1945-1960_ (Philadelphia: Temple University Press, 1994), 84-100.
 
-[^59]:	A wonderful roster of creative women in an age that supposedly discouraged female accomplishment can be found in Eugenia. Kaledin, _Mothers and More: American Women in the 1950s_ (Boston: Twayne Publishers, 1984).
+[^59]:	A wonderful roster of creative women in an age that supposedly discouraged female accomplishment can be found in Eugenia. Kaledin, _Mothers and More: American Women in the 1950s_ (Boston: Twayne, 1984).
 
 [^60]:	Eli Zaretsky, “Charisma or Rationalization? Domesticity and Psychoanalysis in the United States in the 1950s,” _Critical Inquiry_ 26, no. 2 (2000), 338-41.
 
@@ -262,7 +262,7 @@ Others have pointed out that Friedan’s portrait of the intellectual climate wa
 
 Contrary to legend, Friedan did not singlehandedly revive feminism or provide its intellectual basis. Other contemporary feminists recognized the role of biology and psychology in providing justification for circumscribing female aspiration. Such prominent writers as Ruth Herschberger (1917-2014) and Eve Merriam (1916-1992) provided incisive dissents from the conventional wisdom about women’s nature and sharp arguments for their emancipation from restricted status. Like Friedan, Herschberger and Merriam were also Jewish, held advanced degrees, and had left-wing connections. Like _Mystique_, Herschberger’s _Adam’s Rib_ (1948) and Merriam’s _After Nora Slammed the Door: American Women in the 1960s, The Unfinished Revolution_ (1964) opposed motherhood as the sole natural role for women and female deference as a _modus operandi_. The books also shared a resolve to chart the institutions that restricted women’s possibilities, a project Merriam had undertaken as well with _Figleaf_ (1960), an analysis of the fashion industry’s manipulation of women.[^62]
 
-[^62]:	Eve Merriam, *After Nora Slammed the Door* (Cleveland: World Pub. Co., 1964); Eve Merriam, *Figleaf: The Business of Being in Fashion* (Philadelphia: Lippincott, 1960); Ruth Herschberger, *Adam’s Rib* (New York: Pellegrini & Cudahy, 1948).
+[^62]:	Eve Merriam, *After Nora Slammed the Door* (Cleveland: World Publishing, 1964); Eve Merriam, *Figleaf: The Business of Being in Fashion* (Philadelphia: Lippincott, 1960); Ruth Herschberger, *Adam’s Rib* (New York: Pellegrini & Cudahy, 1948).
 
 Given the role of biological science in defining women, both Herschberger and Merriam set their sights on how it came to its findings. They both charged that buried within supposedly objective science were numerous unwarranted assumptions. From their vantage point, studies of sex differences all too often proceeded by taking male and female qualities as given rather than things to be demonstrated. In her 1944 dismantling of Robert Yerkes’ famous work with chimps, Herschberger pointed to the loaded language and tendentious interpretation of ambiguous results that allowed Yerkes to assume incorrectly that males were naturally assertive and females depended on sexual allure.[^63] Responding to assertions that women could not do work involving abstractions because they were naturally concrete thinkers, Merriam, for her part, noted the ways in which evidence to the contrary such as tremendous success of women in theoretical physics classes when they were allowed to take them was discounted or ignored.[^64] Nor was science the only institution that misperceived women. The assumption of female difference was embedded in language itself. “Not the least of man’s capacities,” Merriam argued, “is our male-oriented language” (208). One form of asserting male dominance, Merriam wrote, was “to assign the female to her place as a non-man and set her aside” (206). Another was to incorporate women in a larger whole. The word _man_, she noted, has come to stand for both sexes. Merriam hoped that eventually American society would be organized to “make use of the full individual,” but contended that women needed to overcome the ill effects of internalization of assertions of female difference (67).
 
@@ -277,7 +277,7 @@ For gays and lesbians, belonging was especially problematic. Facing both legal p
 
 It also alerted the larger heterosexual community to their presence and prompted efforts to segregate. New laws required bars and dance halls to surveil their patrons and prohibit same-sex dancing. Other laws were designed to harass drag queens. Gays and lesbians were especially vulnerable at work. Inappropriate gender presentation and accusations of homosexual activity were grounds for dismissal. Dwight Eisenhower tried to rid the WACs of lesbians but stopped when he realized that nearly eighty percent of his female support staff would be drummed out of the corps.⁠ He did manage to issue executive orders that classified homosexual government employees as security risks, a position ratified by the Senate Subcommittee on Investigations. The liberal journalist Max Lerner devoted a twelve-part series to debunking myths about gay and lesbian mental health and proclivities but to little effect. More government employees were dismissed for sex deviation than for Communist sympathies.[^66]
 
-[^66]:	Marcia M. Gallo, _Different Daughters: A History of the Daughters of Bilitis and the Rise of the Lesbian Rights Movement_ (New York: Carroll & Graf Publishers, 2006), 28; Kaiser, _The Gay Metropolis: 1940-1996_, 68-72.
+[^66]:	Marcia M. Gallo, _Different Daughters: A History of the Daughters of Bilitis and the Rise of the Lesbian Rights Movement_ (New York: Carroll & Graf, 2006), 28; Kaiser, _The Gay Metropolis: 1940-1996_, 68-72.
 
 The war also accelerated the medicalization of same-sex attraction and gender transgression. As psychiatrists examined draftees for their suitability for service, they derived criteria that would classify the population as normal or abnormal.[^67] Freud’s own 1937 judgment that homosexuality, while no advantage, was nothing to “be ashamed of, no vice, no degradation, it cannot be classified as an illness,” made no impression in a psychoanalytic atmosphere devoted to adjustment and orderly development. Instead, a sizable portion of the psychiatric and psychoanalytic communities devoted itself to “curing” homosexuality. Prevailing theory held same-sex desire as a result of incomplete Oedipal resolutions often caused by improper parenting. Few “cures” succeeded.
 
@@ -300,15 +300,15 @@ A few scientists provided intellectual support for the contention of homophile o
 
 [^71]:	Henry L. Minton, _Departing From Deviance: A History of Homosexual Rights and Emancipatory Science in America_ (Chicago: University of Chicago Press, 2002), 219-36.
 
-Perhaps the most fascinating account of the experience of homosexuality was Donald Webster Cory’s _The Homosexual in America: A Subjective Approach_ (1951). Cory was the pen name of Edward Sagarin and his book was part testimonial of his own wrenching struggles with his sexuality, part investigation, and part political statement. Cory set out to delineate both what it was like to be a homosexual and what social and political dynamics governed it. The long history of homosexuality enabled him to dispute the characterization of homosexuality as unnatural and a threat to civilization and homosexuals as moral outlaws. The “sordid character of” gay men stemmed from the social attitudes that victimized them, he countered. “A person cannot live in an atmosphere of universal rejection, of widespread pretense, of a society that outlaws and banishes his activities and his desires, of a social world that jokes and sneers at every turn, without a fundamental influence on his personality.”[^72] Just as white society created the Negro problem, so too did heterosexual society create the homosexual problem. To be gay was to be caught in a vicious circle, having inequality forced on one but then having the consequences of that inequality used to justify inequality in the first place.
+Perhaps the most fascinating account of the experience of homosexuality was Donald Webster Cory’s _The Homosexual in America: A Subjective Approach_ (1951). Cory was the pen name of Edward Sagarin and his book was part testimonial of his own wrenching struggles with his sexuality, part investigation, and part political statement. Cory set out to delineate both the experience of homosexuality and the social and political dynamics that governed it. The long history of homosexuality enabled him to dispute the characterization of homosexuality as unnatural and a threat to civilization and homosexuals as moral outlaws. The “sordid character of” gay men stemmed from the social attitudes that victimized them, he countered. “A person cannot live in an atmosphere of universal rejection, of widespread pretense, of a society that outlaws and banishes his activities and his desires, of a social world that jokes and sneers at every turn, without a fundamental influence on his personality.”[^72] Just as white society created the Negro problem, so too did heterosexual society create the homosexual problem. To be gay was to be caught in a vicious circle, having inequality forced on one but then having the consequences of that inequality used to justify inequality in the first place.
 
-The solution, Cory held, was to speak forthrightly as gay people. That gay men could so easily pass was not a blessing. “Actually, the inherent tragedy --- not the saving grace --- of homosexuality is found in the ease of concealment. If the homosexual were as readily recognizable as . . . other minority groups, the social condemnation could not possibly exist. Stereotype thinking on the part of the majority would . . . collapse of its own absurdity if all of us who are gay were known for what we are. . . . If only all of the inverts, the millions in all lands, could simultaneously rise up in our full strength!”[^73] A gay organization should aim not for social tolerance --- which Sagarin defined as the condescension of the superior for the inferior or the evil --- but for acceptance on equal footing.
+The solution, Cory held, was to speak forthrightly as openly gay people. That gay men could so easily pass was not a blessing. “Actually, the inherent tragedy --- not the saving grace --- of homosexuality is found in the ease of concealment. If the homosexual were as readily recognizable as . . . other minority groups, the social condemnation could not possibly exist. Stereotype thinking on the part of the majority would . . . collapse of its own absurdity if all of us who are gay were known for what we are. . . . If only all of the inverts, the millions in all lands, could simultaneously rise up in our full strength!”[^73] A gay organization should aim not for social tolerance, which Sagarin defined as the condescension of the superior for the inferior or the evil, but for acceptance on equal footing.
 
 [^72]:	Donald Webster Cory, _The Homosexual in America: A Subjective Approach_ (New York: Greenberg Publisher, 19151) 12.
 
 [^73]:	Cory, 230.
 
-Although Cory’s book inspired numerous gay and lesbian readers, he himself stayed in the closet for much of his life. As Sagarin, he went on to be a professor of sociology who specialized in deviance and contended homosexuality was not normal. Even as Corey in the late 1950s and early 1960s, he rejected Hooker’s dismissal of the deviance model as unscientific. Having undertaken his 1951 book to demonstrate that same-sex desire was “involuntary, as if inborn,” Corey accepted that homosexuality was attributable to family dysfunction and that the well-adjusted homosexual was a fiction. Efforts to win office in the New York Mattachine Society came to naught. Sagarin later opposed gay liberation and condemned the gender transgressions.
+Although Cory’s book inspired numerous gay and lesbian readers, he himself stayed in the closet for much of his life. As Sagarin, he went on to be a professor of sociology who specialized in deviance and contended homosexuality was not normal. Even as Corey in the late 1950s and early 1960s, he rejected as unscientific Hooker’s dismissal of the deviance model. Having undertaken his 1951 book to demonstrate that same-sex desire was “involuntary, as if inborn,” Corey accepted that homosexuality was attributable to family dysfunction and that the well-adjusted homosexual was a fiction. Efforts to win office in the New York Mattachine Society came to naught. Sagarin later opposed gay liberation and condemned the gender transgressions.
 
 Nonetheless Sagarin paved the way for numerous attacks on the closet. Jenette Howard Foster, who had worked as a librarian at Indiana University for Alfred Kinsey’s sex research projects, self-published _Sex Variant Women in Literature_ in the 1956. The book enjoyed something of a _samizdat_ life until reissued in 1975. By the late 1960s the gender non-conforming behavior and dress that appeared in numerous gay and lesbian cultures not only in large coastal cities of Los Angeles, San Francisco, and New York, but also, as Elizabeth Lapovsky Kennedy and Madeline D. Davis have demonstrated in the working-class precincts of Buffalo were commonplaces.[^74] That Sagarin/Corey did not recognized the realization of his wish that homosexuals speak as themselves is testimony how the struggle for inclusion created divisions not only among homosexuals but, in this case, in the personality of one of its original advocates.
 
